# Discregrid

./: .clang-format  .gitignore  CMakeLists.txt
cmd/discrete_field_to_bitmap/: CMakeLists.txt  bmp_file.cpp  main.cpp
cmd/generate_density_map/: CMakeLists.txt  gauss_quadrature.hpp
cmd/generate_sdf/: CMakeLists.txt
discregrid/: CMakeLists.txt
discregrid/include/Discregrid/: cubic_lagrange_discrete_grid.hpp  discrete_grid.hpp
discregrid/include/Discregrid/acceleration/: bounding_sphere.hpp  bounding_sphere_hierarchy.hpp  kd_tree.hpp  kd_tree.inl
discregrid/include/Discregrid/geometry/: mesh_distance.hpp
discregrid/include/Discregrid/mesh/: entity_containers.hpp  entity_iterators.hpp  halfedge.hpp  triangle_mesh.hpp
discregrid/include/Discregrid/utility/: lru_cache.hpp  serialize.hpp
discregrid/src/: cubic_lagrange_discrete_grid.cpp  discrete_grid.cpp
discregrid/src/acceleration/: bounding_sphere_hierarchy.cpp
discregrid/src/data/: z_sort_table.hpp
discregrid/src/geometry/: mesh_distance.cpp  point_triangle_distance.cpp  point_triangle_distance.hpp
discregrid/src/mesh/: entity_containers.cpp  entity_iterators.cpp  triangle_mesh.cpp
discregrid/src/utility/: spinlock.hpp  timing.hpp
